# videoSrtEdit

./: .gitignore  CMakeLists.txt
res/: mainwid.css  show.css
src/: cvideoctl.cpp  cvideoctl.h  main.cpp
src/common/: datactl.h  unility.cpp  unility.h
src/widget/: CustomSlider.cpp  MainWnd.cpp  MainWnd.h  MainWnd.ui  cshow.cpp  cshow.h  ctrlbar.cpp  ctrlbar.h
